@@ -11,7 +11,9 @@ Version 2.2.2
    - Bugfix: Obtaining the panel's size (GNOME)
    - Updated Hungarian translation (thanks to Wallner Adam)
    - Updated Vietnamese translation (thanks to Clytie Siddall)
-	
+   - Feature: Three new options for filtering messages via regular expressions
+        (feature request #1493670 by sunyata and others)
+
 Version 2.2.1		2006-05-14 20:08
  * Robert Sowada
    - Changed version to 2.2.1
